--- a/index.html
+++ b/index.html
@@ -15,8 +15,16 @@
         <button id = "btn" class="title">HELLO!</button>
         
     </div> -->
-    <input type = "button" id = "button" value = "HELLO!" class = "title" onclick= "setColor('button', 'white')";/>
-        
+
+    <input type = "button" id = "buttonH" value = "H" class = "title titleH" onclick= "setColor1('buttonH', 'white')";/>  
+    <input type = "button" id = "buttonE" value = "E" class = "title" onclick= "setColor2('buttonE', 'white')";/> 
+    <input type = "button" id = "buttonL1" value = "L" class = "title" onclick= "setColor3('buttonL1', 'white')";/>
+    <input type = "button" id = "buttonL2" value = "L" class = "title" onclick= "setColor4('buttonL2', 'white')";/>
+    <input type = "button" id = "buttonO" value = "O" class = "title" onclick= "setColor5('buttonO', 'white')";/> 
+    <input type = "button" id = "button!" value = "!" class = "title" onclick= "setColor4('button!', 'white')";/>
+
+
+
      <p class = "construction">
         my site is under construction.
      </p>
